--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,8 +27,14 @@
 
         </nav>
     </header>
+    <div id="menu" class="fas fa-bars"></div>
 
-
+    <section class="home" id="home">
+        <h3>Olá Mundo!!</h3>
+        <h1>Eu sou<br> <span>Júlio C. Mesquita</span></h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit sed recusandae, nobis magnam accusamus autem odit temporibus tempora labore perferendis praesentium eaque corrupti repellat tenetur quod. Ipsam quaerat natus dicta.</p>
+        <a href="#sobre"><button class="btn">Saiba mais <i class="fas fa-user"></i></button> </a>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../JAVASCRIPT/script.js"></script>
