--- a/HTML/index.html
+++ b/HTML/index.html
@@ -114,6 +114,29 @@
             </div>
         </div>
     </section>
+    <section class="portifolio" id="portifolio">
+        <h1 class="heading"> Meus <span>Projetos</span></h1>
+        <div class="box-conteiner">
+            <div class="box">
+                <img src="../IMAGE/image.1.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="../IMAGE/image.2.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="../IMAGE/image.3.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="../IMAGE/image.4.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="../IMAGE/image.5.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="../IMAGE/image.6.jpg" alt="">
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../JAVASCRIPT/script.js"></script>
