--- a/HTML/index.html
+++ b/HTML/index.html
@@ -138,6 +138,27 @@
         </div>
     </section>
 
+    <section class="contato" id="contato">
+        <h1 class="heading"><span>Contatos</span></h1>
+        <div class="row">
+            <div class="content">
+                <h3 class="title">Informações pra Contato</h3>
+                <div class="info">
+                    <h3><i class="fas fa-envelope"></i>@email.com</h3>
+                    <h3><i class="fas fa-phone"></i>+123456789</h3>
+                    <h3><i class="fas fa-map-marker-alt"></i>Ceara, Brasil - América</h3>
+                </div>
+            </div>
+            <form action="">
+                <input type="text" placeholder="Nome" class="box">
+                <input type="email" placeholder="Email" class="box">
+                <input type="text" placeholder="Projeto" class="box">
+                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="Mensagem..."></textarea>
+                <button type="submit" class="btn">Enviar<i class="fas fa-paper-plane"></i></button>
+            </form>
+        </div>
+    </section>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../JAVASCRIPT/script.js"></script>
 </body>
